# hitalent

./: .env  .env.example  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 55dfe3c8d9cb_initial_migration.py
core/: logger.py  settings.py
database/: base.py  database.py  mappers.py  models.py
database/repositories/: departmanet_repo.py  employee_repo.py
domain/: entities.py
presentation/: department.py  dto.py
